--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fe-wallet",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tomidamianovich.github.io/fe-wallet/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -11,6 +12,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "json-server": "^0.17.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -22,12 +24,15 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sass": "^1.52.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "start-server": "json-server --watch db.json --port 3001",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
