--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "@types/react-dom": "^18.0.4",
     "axios": "^0.27.2",
     "gh-pages": "^4.0.0",
+    "i18next": "^21.8.8",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
+    "install": "^0.13.0",
     "json-server": "^0.17.0",
+    "npm": "^8.12.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.17.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
